@@ -61,11 +61,7 @@ public class JmsMessageListenerInstrumentation extends BaseJmsInstrumentation {
 
     @Override
     public ElementMatcher<? super TypeDescription> getTypeMatcher() {
-        return not(isInterface())
-            .and(
-                hasSuperType(named("javax.jms.MessageListener"))
-                    .or(hasSuperType(named("org.springframework.jms.listener.SessionAwareMessageListener")))
-            );
+        return not(isInterface()).and(hasSuperType(named("javax.jms.MessageListener")));
     }
 
     @Override
