@@ -111,7 +111,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>apm-jms-plugin</artifactId>
+            <artifactId>apm-jms-plugin-base</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
