@@ -54,6 +54,7 @@ endif::[]
 * Fix `IllegalAccessError: Module 'java.base' no access to: package 'java.lang'...` in J9 VMs of Java version >= 9 -
   {pull}1468[#1468]
 * Fix JVM version parsing on HP-UX {pull}1477[#1477]
+* Fix Spring-JMS transactions lifecycle management when using multiple concurrent consumers - {pull}1496[#1496]
 
 ===== Refactors
 * Migrate some plugins to indy dispatcher {pull}1404[1404] {pull}1411[1411]
